--- a/index.css
+++ b/index.css
@@ -29,11 +29,18 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.25rem;
+    padding: 2rem 1.25rem;
 }
 
 .header nav {
     display: none;
+}
+
+.header #menu-btn {
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
 
 .showcase {
@@ -44,13 +51,13 @@ li {
 .showcase h1 {
     font-size: 2rem;
     font-weight: 900;
-    color:  hsl(240, 100%, 5%);
+    color: hsl(240, 100%, 5%);
     margin: 1rem 0;
 }
 
 /*   */
 
-.showcase > div:first-child article button {
+.showcase>div:first-child article button {
     background-color: hsl(5, 85%, 63%);
     color: #fff;
     padding: .85rem 2rem;
@@ -64,39 +71,39 @@ li {
     transition: all 0.3s ease-in-out;
 }
 
-.showcase > div:first-child article button:hover {
+.showcase>div:first-child article button:hover {
     cursor: pointer;
     background-color: hsl(240, 100%, 5%);
 }
 
-.showcase > div:last-child {
+.showcase>div:last-child {
     background-color: hsl(240, 100%, 5%);
     padding: 1.25rem 1.25rem 0;
     margin-top: 2rem;
 
 }
 
-.showcase > div:last-child h2 {
+.showcase>div:last-child h2 {
     color: hsl(35, 77%, 62%);
 }
 
-.showcase > div:last-child article {
+.showcase>div:last-child article {
     padding: 1.25rem 0;
 }
 
-.showcase > div:last-child article:not(:last-child) {
+.showcase>div:last-child article:not(:last-child) {
     border-bottom: 1px solid hsl(236, 13%, 42%);
 }
 
 
-.showcase > div:last-child h3 {
+.showcase>div:last-child h3 {
     color: #fff;
     margin-bottom: 0.5rem;
 }
 
-.showcase > div:last-child h3:hover {
+.showcase>div:last-child h3:hover {
     color: hsl(35, 77%, 62%);
-    cursor: pointer ;
+    cursor: pointer;
 }
 
 .cards {
@@ -130,3 +137,57 @@ li {
     margin: 1rem 0;
 }
 
+@media (min-width: 1024px) {
+    body {
+        width: 1100px;
+        margin: auto;
+    }
+
+    .header #menu-btn {
+        display: none;
+    }
+
+    .showcase {
+        display: flex;
+        gap: 2rem;
+    }
+
+    .showcase>div:first-child {
+        flex-basis: 68%;
+    }
+
+    .showcase>div:last-child {
+        flex-basis: 32%;
+    }
+
+    .showcase h1 {
+        font-size: 3.5rem;
+        padding-right: 2.5rem;
+    }
+
+    .showcase>div:first-child article {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+        place-items: center;
+        margin-top: 1.25rem;
+    }
+
+    .showcase>div:last-child {
+        margin-top: 0;
+    }
+
+    .showcase>div:first-child article button {
+        margin-top: 2rem;
+    }
+
+    .cards {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin-top: 2rem;
+    }
+}
+
+.attribution {
+    padding: 1.25rem 0;
+}
