--- a/index.css
+++ b/index.css
@@ -32,29 +32,27 @@ li {
     padding: 2rem 1.25rem;
 }
 
-
-.header nav.open{
+.header nav.open, .header nav.close {
     position: fixed;
     right: 0;
     top: 0;
     bottom: 0;
+    background-color: white;
+    transition: all 0.3s ease-in-out;
+
+
+}
+.header nav.open{
     width: 75vw;
     padding: 1.25rem;
-    background-color: white;
     z-index: 999999;
-    transition: all 0.3s ease-in-out;
 }
 
 .header nav.close{
-    position: fixed;
-    right: 0;
-    top: 0;
-    bottom: 0;
     width: 0vw;
     padding: 0rem;
     background-color: white;
     z-index: -999999;
-    transition: all 0.3s ease-in-out;
 }
 
 .header nav ul {
